src/components/templates/education/program/course/theme/test/Test.module.scss
@use "/src/styles/utils.module.scss" as *;

.container {
    position: relative;
    width: 100%;
}

.time_left {
    &_container {
        position: fixed;
        top: 100px;
        right: 100px;
        display: flex;
        flex-direction: column;
        align-items: center;

        & .text {
            font-size: 20px;
        }

        & .time {
            font-size: 24px;
            font-weight: 500;

            &_out {
                color: $mainRedColor
            }
        }
    }
}

.test {
    width: 800px;
    background-color: transparentize($mainBlueColor, 0.7);
    border: 1px solid transparentize($mainBlueColor, 0.5);
    border-radius: 10px;
    margin: 20px 0;
    padding: 20px 20px 20px 40px;
    box-sizing: border-box;
    position: relative;
    box-shadow: 0 10px 20px #0000002a;

    &_list {
        display: flex;
        flex-direction: column;
        margin-left: 100px;

        &_mini {
            &_container {
                box-shadow: 0 10px 20px #0000002a;
                position: fixed;
                top: 200px;
                right: 100px;
                width: 350px;
                background-color: transparentize($mainBlueColor, 0.7);
                border: 1px solid transparentize($mainBlueColor, 0.5);
                padding: 20px;
                border-radius: 10px;
                opacity: 0.4;
                transition: all 0.3s ease-in-out;

                &:hover {
                    opacity: 1;
                }
            }

            display: flex;
            flex-direction: row;
            flex-wrap: wrap;
            justify-content: flex-start;
            width: 100%;
            position: relative;
            overflow-y: auto;

            & .item {
                background-color: transparentize($mainBlueColor, 0.9);
                border: 1px solid #fff;
                width: 50px;
                height: 50px;
                border-radius: 12px;
                margin: 5px;
                display: flex;
                align-items: center;
                justify-content: center;
                cursor: pointer;
                box-sizing: border-box;
                transition: all 0.3s ease-in-out;

                &_answered {
                    background-color: #ffffff80;
                }

                &:hover {
                    background-color: rgba(255, 255, 255, 0.863);
                }
            }

        }
    }

    &_number {
        position: absolute;
        left: 10px;
        top: 20px;
        font-size: 18px;
    }

    &_question {
        font-size: 20px;
        width: 100%;
        background-color: #ffffff80;
        border: 1px solid #fff;
        border-radius: 10px;
        padding: 10px;
        margin-bottom: 10px;
        user-select: none;
    }

    &_questions_amount {
        margin: 10px 0;
    }

    &_answers {
        background-color: #ffffff80;
        border: 1px solid #fff;
        border-radius: 10px;
        padding: 10px;
    }

    &_answer {
        display: flex;
        flex-direction: row;
        margin: 5px 0;

        &_text:hover {
            cursor: pointer;
        }
    }
}

